不再依赖struts2，改为直接使用servlet

--- a/com.zizibujuan.mianzi.example/.settings/org.eclipse.wst.common.component
+++ b/com.zizibujuan.mianzi.example/.settings/org.eclipse.wst.common.component
@@ -6,6 +6,9 @@
         <dependent-module archiveName="mianzi-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/com.zizibujuan.mianzi/com.zizibujuan.mianzi">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="util.json-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/com.zizibujuan.util.json/com.zizibujuan.util.json">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/com.zizibujuan.mianzi.example/build/classes"/>
         <property name="context-root" value="mianzi.example"/>
     </wb-module>
